# NN_lander

./: CMakeLists.txt  LICENSE
NN_training/: ModelTraining.ipynb  data.txt  model
src/: main.cpp
src/lander_game/: game.cpp  game.h  rocket.cpp  rocket.h  world.cpp  world.h
